Generic changes/fixes
	* update MacOS info.plist as well as start shell script
	* add building md5 hash for download verification
		
Device specific changes/fixes
	* GPS-Logger2/3 - fix error for Android saved OSD files
	* GPS-Logger2/3 - allow AirSpeed tolerance to calculate offset between pressure sensors
	* HoTTAdapter* - change log level of Sensor and block number to INFO


Version 3.5.3 - 20 Jan 2022
Generic changes/fixes
	* add base directory to Linux start scripts
	* fix a possible error when displaying history graphs calculations with an empty trail record set
	* cleanup senseless log level OFF or change to level INFO
	* fix grid line alignment error while toggle to 10 grid lines
	* update Java version check to allow Java 17
		
Device specific changes/fixes
	* Junsi iChargerUSB - add message box signaling timeout while initializing program memories for dialog
	* Junsi iChargerDX6,S6 - cleanup duplicated BatteryTypesX definition
	* Junsi iChargerDX* - fix partially wrong program memory, PB, Ni* max cells
	* Junsi iChargerDX* - update LiHV maximum charging voltage to 4.45 V
	* HoTTAdapter*2 - cleanup possible clash AirSpeed Vario, sync update variable Vario/GPS dependencies
	* GPS-Logger2/3 - update configuration capability Jeti, MPX, HoTT

Version 3.5.2 - 23 DEC 2021
Generic changes/fixes
	* correct statistic value formating while two triggers are defined
	* correct average calculation while two triggers are defined
	* update jSerialComm to version 2.7.0 to support MAC OS X ARM architecture
	* update formatting GPS coordinates
	* update XSD to enable device based request as byte hex array to be written before reading from serial port
	
Device specific changes/fixes
	* Junsi iChargerUSB - correct energy calculation for continuous recorded data while loading from OSD
	* Junsi DX* - correct input power values
	* Junsi DX* - correct system parameter dialog according updated specification
	* Junsi DX* - add graphics templates